
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendation-engine-batch-online"
version = "0.1.0"
description = "Blend batch candidate generation and online ranking into a starter recommender workflow."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
